[gd_scene load_steps=3 format=3 uid="uid://ryrearitmwkv"]

[ext_resource type="Script" uid="uid://e3f4g5h6i7j8k" path="res://scripts/enemy_core.gd" id="1_enemy_core"]
[ext_resource type="PackedScene" uid="uid://b7k3l2m1n8p9q" path="res://scenes/HealthBar.tscn" id="2"]

[node name="EnemyCore" type="StaticBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_enemy_core")

[node name="CoreSprite" type="Polygon2D" parent="."]
color = Color(0.9, 0.2, 0.2, 1.0)
polygon = PackedVector2Array(0, -40, 35, -20, 35, 20, 0, 40, -35, 20, -35, -20)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -40, 35, -20, 35, 20, 0, 40, -35, 20, -35, -20)

[node name="HealthBar" parent="." instance=ExtResource("2")]
position = Vector2(0, -50)

[node name="EnemyAI" type="Node2D" parent="."]
script = "res://scripts/enemy_ai.gd" 